--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="shortcut icon" href="images/icon/Group 5.png" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -45,28 +45,28 @@
         <div class="row">
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro1.png" alt="">
-            <p class="pl-3">player-1</p>
+            <p class="pl-3">Maxwell</p>
           </div>
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro2.png" alt="">
-            <p class="pl-3">player-2</p>
+            <p class="pl-3">Breathweight</p>
           </div>
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro3.png" alt="">
-            <p class="pl-3">player-3</p>
+            <p class="pl-3">Watson</p>
           </div>
         
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro4.png" alt="">
-            <p class="pl-3">player-1</p>
+            <p class="pl-3">Hasim Amla</p>
           </div>
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro5.png" alt="">
-            <p class="pl-3">player-2</p>
+            <p class="pl-3">Shakib All Hasan</p>
           </div>
           <div class="col-md-4 col-sm-6 player p-3 d-flex align-items-center">
             <img src="images/photo/pro6.png" alt="">
-            <p class="pl-3">player-3</p>
+            <p class="pl-3">Ms Doni</p>
           </div>
         </div>
         <hr>
